traducao de textos em ingles

--- a/Trab Ciber Seg/index.html
+++ b/Trab Ciber Seg/index.html
@@ -59,10 +59,10 @@
        
             </div>
             <div class="column-2">
-              <label for="cardnumber">Card Number</label>
+              <label for="cardnumber">Número do cartão</label>
               <input type="text" id="cardnumber"/>
        
-              <span class="info">* CVV or CVC is the card security code, unique three digits number on the back of your card separate from its number.</span>
+              <span class="info">*CVV ou CVC é o código de segurança do cartão, um número único de três dígitos localizado no verso do seu cartão, separado do número do cartão.</span>
             </div>
           </div>
         </div>
