atualização dos algoritimos de criptografia

--- a/Trab Ciber Seg/index.html
+++ b/Trab Ciber Seg/index.html
@@ -73,6 +73,7 @@
           <button onclick="confirmPurchase()" class="btn next-btn">Próximo Passo</button>
         </div>
       </div>
+<script type="module" src="JS/scriptRSA.js"></script>
 
 </body>
 </html>
