Scrip Compra confirmada, Ajuste CSS pagina de Compra Confirmada

--- a/Trab Ciber Seg/compra-confirmada.html
+++ b/Trab Ciber Seg/compra-confirmada.html
@@ -3,25 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Estilo/styleCompraConfirmada.css">
     <title>Compra Confirmada</title>
-    <style>
-        body {
-            font-family: 'Montserrat', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background: #eeeeee;
-        }
-        .message {
-            font-size: 24px;
-            color: #2e2e2e;
-        }
-    </style>
 </head>
 <body>
     <div class="message">
-        Compra Confirmada! Obrigado por sua compra.
+        <h2>Compra Confirmada! <br> Obrigado por sua compra.</h2>
+        <img src="img/check.png" alt="Palmas">
     </div>
 </body>
 </html>
