--- a/Trab Ciber Seg/index.html
+++ b/Trab Ciber Seg/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmação de Compra</title>
     <link rel="stylesheet" href="Estilo/style.css">
-    <script type="module" src="JS/script.js"></script>
+    <script src="JS/script.js"></script>
 </head>
 <body>
     <div class="checkout-panel">
@@ -50,7 +50,7 @@
                 <div>
                   <label for="date">Data de Validade</label>
                   <input type="text" id="date" placeholder="MM/AAAA" maxlength="6"/>
-                </div>
+                </div> 
        
                 <div>
                   <label for="verification">CVV / CVC</label>
@@ -73,7 +73,5 @@
           <button onclick="confirmPurchase()" class="btn next-btn">Próximo Passo</button>
         </div>
       </div>
-<script type="module" src="JS/scriptRSA.js"></script>
-
 </body>
 </html>
